--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,8 @@ html(ng-app="myApp")
     meta(charset='utf8')
     base(href='/')
     title &#162;flo #{title}
-    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic')
-    link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='/styles/type.css')
+    link(rel='stylesheet', href='/styles/font-awesome.min.css')
     link(rel='stylesheet', href='/styles/main.css')
     link(rel='stylesheet', href='/styles/grid.css')
   body
