build angular views and more

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -52,11 +52,8 @@ a {
 h1 {
   letter-spacing: -2px;
   font-weight: 300;
-  font-size: 80px;
+  font-size: 40px;
   margin: 0px 0px 0px 0px;
-}
-h1.coffee {
-  color: #603920;
 }
 h2,
 label {
@@ -64,36 +61,88 @@ label {
   font-weight: 200;
   text-transform: uppercase;
 }
-a,
-input[type=submit] {
+a {
   font-weight: 400;
   letter-spacing: 0px;
-  text-decoration: underline;
+  text-decoration: none;
   -webkit-transition: color 0.2s linear;
   -moz-transition: color 0.2s linear;
   -ms-transition: color 0.2s linear;
   -o-transition: color 0.2s linear;
   transition: color 0.2s linear;
 }
-a:hover,
-input[type=submit]:hover {
-  color: #c15a45;
+a:hover {
+  color: #6b8ccd;
+}
+button {
+  border: 2px solid #85a0d6;
+  background: none;
+  text-transform: uppercase;
+  color: #85a0d6;
+  cursor: pointer;
+  outline: none;
+}
+button a {
+  text-decoration: none;
+  color: inherit;
+}
+button:hover {
+  border: 2px solid #9db3de;
+  color: #9db3de;
+}
+button:hover a {
+  color: #9db3de;
 }
 header {
-  margin: 0 auto;
+  margin: 0 auto 20px 0;
   width: 100%;
   text-align: center;
-  height: 40px;
+  height: 60px;
+  background: #eee;
+  border-bottom: 1px solid #ddd;
+}
+header h1 {
+  color: #ae3a42;
+  margin: 0;
+  padding: 5px;
 }
 footer {
   margin: 0 auto;
   width: 100%;
   text-align: center;
 }
+.box {
+  text-align: center;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
 .pane {
-  height: 400px;
-  background: #f00;
+  height: 300px;
 }
 .graph {
-  height: 60%;
+  height: 500px;
+}
+.add {
+  background: #eee;
+  -webkit-transition: 0.3s linear;
+  -moz-transition: 0.3s linear;
+  -ms-transition: 0.3s linear;
+  -o-transition: 0.3s linear;
+  transition: 0.3s linear;
+  cursor: pointer;
+  font-size: 230px;
+}
+.add:hover {
+  background: #6b8ccd;
+  color: #b6c6e6;
+}
+.add a {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  background: none;
+  border: none;
 }
