--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,3 @@
 extend layout
 block content
-  div(class="row")
-    div(ng-repeat="pane in panes" class="column six pane")
-      h1 {{pane.name}}
-    div(class="column six pane")
-      form(ng-submit="addPane()")
-        input(class="add" type="submit" value="+")
+  div(ng-view)
