--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,7 @@
 extend layout
 block content
-  div(ng-view)
+  header
+    a(href='#')
+      h1 &#162;flo
+  div(class="container")
+    div(ng-view)
