--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -62,8 +62,9 @@ h1
   margin 0px 0px 0px 0px
 
 h2, label
-  margin 10px 0 40px 0
-  font-weight 200
+  margin 40px 0 10px 0
+  font-weight 300
+  color #999
   text-transform uppercase
 
 a
@@ -93,6 +94,27 @@ button
     color lighten(BLUE, 20%)
     a
       color lighten(BLUE, 20%)
+
+input
+  width 400px
+  font-weight 200
+  padding 5px
+  border 2px solid BLUE
+  background none
+  font-size 16px
+  color BLUE
+  outline none
+  &:focus
+    border 2px solid lighten(BLUE, 20%)
+    color lighten(BLUE, 20%)
+::-webkit-input-placeholder
+   color: #bbb;
+:-moz-placeholder
+   color: #bbb;
+::-moz-placeholder
+   color: #bbb;
+:-ms-input-placeholder
+   color: #bbb;
 
 header
   margin 0 auto 20px 0
