get working forms

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,8 +9,10 @@ html(ng-app="cfloApp")
     link(rel='stylesheet', href='/styles/main.css')
     link(rel='stylesheet', href='/styles/grid.css')
     script(src='/js/jquery.min.js')
+    script(src='/js/chart.js')
   body
     block content
+    script(src='/js/canvas_chart.js')
     script(src='/js/angular.min.js')
     script(src='/js/angular-route.js')
     script(src='/js/controllers.js')
