--- a/views/partials/pane.jade
+++ b/views/partials/pane.jade
@@ -12,3 +12,4 @@ div(class="row")
   div(class="box column six pane add" ng-click="addPane()") +
 div(class="row")
   div(class="box column twelve graph")
+    canvas(id="myChart" width="1200px" height="400px")
