--- a/views/partials/add.jade
+++ b/views/partials/add.jade
@@ -12,13 +12,13 @@ p
 
 h2 Is it a loan?
 p
-  input(class='field' ng-model='trans.principal' placeholder='principal amount')
+  input(class='field' ng-model='trans.loan_principal' placeholder='principal amount')
 p
-  input(class='field' ng-model='trans.annual' placeholder='annual rate')
+  input(class='field' ng-model='trans.annual_rate' placeholder='annual rate')
 p
-  input(class='field' ng-model='trans.monthly' placeholder='monthly payment')
+  input(class='field' ng-model='trans.monthly_payment' placeholder='monthly payment')
 p
-  input(class='field' ng-model='trans.maturity' placeholder='maturity date')
+  input(class='field' ng-model='trans.maturity_date' placeholder='maturity date')
 
 h2 Is it money owed to a supplier?
 p
