--- a/views/partials/edit.jade
+++ b/views/partials/edit.jade
@@ -14,13 +14,13 @@ p
 
 h2 Is it a loan?
 p
-  input(class='field' ng-model='trans.principal' placeholder='principal amount')
+  input(class='field' ng-model='trans.loan_principal' placeholder='principal amount')
 p
-  input(class='field' ng-model='trans.annual' placeholder='annual rate')
+  input(class='field' ng-model='trans.annual_rate' placeholder='annual rate')
 p
-  input(class='field' ng-model='trans.monthly' placeholder='monthly payment')
+  input(class='field' ng-model='trans.monthly_payment' placeholder='monthly payment')
 p
-  input(class='field' ng-model='trans.maturity' placeholder='maturity date')
+  input(class='field' ng-model='trans.maturity_date' placeholder='maturity date')
 
 h2 Is it money owedto a supplier?
 p
@@ -30,4 +30,4 @@ p
 p
   input(class='field' ng-model='trans.days' placeholder='days paid (between 0 and 30 inclusive)')
 button(ng-click="changeData(trans)" )
-  a(href='#') submit
+  a(href='#/{{editing}}') submit
