get donnya working

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,3 +5,6 @@ block content
       h1 &#162;flo
   div(class="container")
     div(ng-view)
+    div(class="row")
+      div(class="box column twelve graph")
+        canvas(id="myChart" width="940px" height="480px")
