--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -138,6 +138,10 @@ footer {
   width: 100%;
   text-align: center;
 }
+canvas {
+  margin: 0;
+  padding: 0;
+}
 .box {
   text-align: center;
   box-sizing: border-box;
