--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -129,7 +129,7 @@ header {
   border-bottom: 1px solid #ddd;
 }
 header h1 {
-  color: #ae3a42;
+  color: #39964c;
   margin: 0;
   padding: 5px;
 }
@@ -164,10 +164,20 @@ canvas {
   -o-transition: 0.3s linear;
   transition: 0.3s linear;
   cursor: pointer;
-  font-size: 230px;
+}
+.add p {
+  margin: 0;
+  padding: 0;
+  font-size: 200px;
+}
+.add small {
+  font-size: 20px;
 }
 .add:hover {
   background: #6b8ccd;
+}
+.add:hover p,
+.add:hover small {
   color: #b6c6e6;
 }
 .add a {
