--- a/views/partials/pane.jade
+++ b/views/partials/pane.jade
@@ -1,6 +1,7 @@
 div(class="row")
   div(ng-repeat="pane in panes" ng-show="$first" class="box column six pane {{pane.name}}")
     h1 {{pane.name}}
+    h4 current cash: {{current_cash}}
     button
       a(href='#add') Add Transaction
   div(ng-repeat="pane in panes" ng-hide="$first" class="box column six pane")
@@ -9,4 +10,6 @@ div(class="row")
     button(ng-click="commitPane(pane.name)") commit
     button
       a(href='#edit/{{pane.name}}') Edit Transaction
-  div(class="box column six pane add" ng-click="addPane()") +
+  div(class="box column six pane add" ng-click="addPane()")
+    p +
+    small add a new comparison
